--- a/.gitignore
+++ b/.gitignore
@@ -165,8 +165,10 @@ cython_debug/
 .DS_Store
 
 # archivos modelos de keras
+*.h5
 *.keras
 !seg_model_weights.best.weights.h5
+!seg_model_weights.h5
 !cnn_model.keras
 
 #contenedores
