--- a/config.json
+++ b/config.json
@@ -5,6 +5,14 @@
       "img_width": 256,
       "img_channels": 3,
       "weights_path": "best_model.keras"
-    }
+    },
+    "classes": [
+        {"color": "#3C1098", "label": "Púrpura: Construcciones."},
+        {"color": "#8429F6", "label": "Morado: Tierra, suelo."},
+        {"color": "#6EC1E4", "label": "Azul claro: Carreteras"},
+        {"color": "#FEDD3A", "label": "Amarillo: Vegetacion, arboles."},
+        {"color": "#E2A929", "label": "Naranja: Agua, lagos, rios."},
+        {"color": "#9B9B9B", "label": "Gris: Sin etiqueta."}
+    ]
   }
   
